# sofie-casparcg-server

./: .gitignore  BUILDING.md  CHANGELOG  CHANGELOG.md  README  README.md  version.tmpl
.github/workflows/: linux-system.yml  linux.yml  windows.yml
accelerator/: accelerator.cpp
common/: CMakeLists.txt  log.cpp
core/: thumbnail_generator.cpp
core/producer/: frame_producer.cpp
core/producer/transition/: transition_producer.cpp
dependencies64/cef/: UPDATING.md
dependencies64/cef/linux/Release/: chrome-sandbox  libvulkan.so.1
dependencies64/cef/win32/: README.txt
modules/decklink/consumer/: decklink_consumer.cpp
modules/ffmpeg/producer/: ffmpeg_producer.cpp
modules/html/producer/: html_producer.cpp
protocol/osc/: client.h
src/: CMakeLists.txt
src/CMakeModules/: Bootstrap_Linux.cmake  Bootstrap_Windows.cmake
src/accelerator/: CMakeLists.txt
src/accelerator/d3d/: d3d_device.cpp
src/accelerator/ogl/image/: image_mixer.cpp
src/common/: CMakeLists.txt  prec_timer.h
src/common/os/windows/: prec_timer.cpp
src/core/: StdAfx.h  video_channel.cpp  video_channel.h  video_format.h
src/core/consumer/: output.cpp
src/core/frame/: frame_factory.h
src/core/producer/: cg_proxy.h  stage.cpp  stage.h
src/modules/: CMakeLists.txt
src/modules/decklink/: CMakeLists.txt
src/modules/html/: CMakeLists.txt  html.cpp  packages.config
src/protocol/: CMakeLists.txt
src/protocol/amcp/: AMCPCommandsImpl.cpp  AMCPProtocolStrategy.h
src/shell/: CMakeLists.txt  casparcg.config  server.cpp
tools/linux/: image-versions
tools/windows/: package.bat
(+12 files in other folders)
